[package]
name = "j1939"
version = "0.1.0"
edition = "2021"
description = "A J1939 stack written in rust"
repository = "https://github.com/pbert519/j1939"
license = "MIT"
keywords = ["j1939", "nema2000"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-can = { version = "^0.4" }
crossbeam-queue = { version = "^0.3", default-features = false, features = ["alloc"]}
num_enum = { version = "0.6", default-features = false }

[dev-dependencies]
socketcan = "^2.0.0"