[package]
name = "j1939"
version = "0.1.0"
edition = "2021"
description = "A J1939 stack written in rust"
repository = "https://github.com/pbert519/j1939"
license = "MIT"
keywords = ["j1939", "nema2000"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
std = []

[dependencies]
embedded-can = { version = "^0.4" }
crossbeam-queue = { version = "^0.3", default-features = false, features = ["alloc"]}
num_enum = { version = "0.7", default-features = false }
fugit = "0.3.7"
tinyvec = { version = "1.6.0", features = ["alloc"] }

[dev-dependencies]
socketcan = "^3.0.0"
